--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,6 +81,10 @@ header nav .container span{
   color: white;
 }
 
+header nav .container span.small-screen{
+  display: none;
+}
+
 main{
   display: flex;
   flex-direction: column;
@@ -160,4 +164,107 @@ footer .container{
   display: flex;
   align-items: center;
   width: 960px;
+}
+
+@media only screen and (max-width: 1024px){
+  header #title{
+    width: 100%;
+  }
+
+  header nav .container{
+    justify-content: center;
+  }
+
+  header nav .container span.large-screen{
+    display: none;
+  }
+
+  header nav .container span.small-screen{
+    display: inline;
+  }
+
+  main #products{
+    width: 100%;
+  }
+
+  main #products figure{
+    width: 47%;
+  }
+
+  main #products figure.glasses{
+    display: none;
+  }
+
+  main #info{
+    width: 100%;
+  }
+
+  footer .container{
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 470px){
+  header #title img{
+    margin: 0.66rem auto;
+  }
+
+  header #title p{
+    display: none;
+  }
+
+  header #label{
+    height: 15rem;
+    background-image: url("../content/motorcycle.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left;
+  }
+
+  header #label .container{
+    width: 100%;
+  }
+
+  header #label .container figure{
+    width: 100%;
+    margin-top: 10rem;
+  }
+
+  header #label .container figure p{
+    font-size: 0.77rem;
+    margin: 1rem 2rem 0.25rem 2rem;
+  }
+
+  header #label .container figure h1{
+    font-size: 1rem;
+    margin: 0 2rem 1rem 2rem;
+  }
+
+  main #products{
+    justify-content: center;
+  }
+
+  main #products figure{
+    width: 90%;
+  }
+
+  main #products figure.watch{
+    display: none;
+  }
+
+  main #info{
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+
+  main #info figure{
+    width: 100%;
+    margin-bottom: 0.5rem;
+  }
+
+  footer .container{
+    display: flex;
+    justify-content: center;
+  }
 }
